with their complete changes, see the AUTHORS file.

-------------------------------------------------------------------------------

* Changes in Cdecl 18.3

** `no` option autocompletion
Since the "no" options are of the form `nofoo` and not `no-foo`, if the user
types:

    cdecl> set no-<tab>

i.e., includes '-', it's changed to just "no" so **cdecl** will still present
all the "no" options.

** `language` option
The `lang` option has been replaced by `language` to match the `--language`
command-line option.

** Fixed `set` _lang_
Giving a value for a language for the `set` command is now correctly forbidden,
e.g.:

    cdecl> set c=x
                 ^
    7: error: "x": set option "c" takes no value

** `##` whitespace
Fixed incorrect deletion of whitespace when concatenating tokens in some cases.

** `__VA_ARGS__` as `##` argument
`__VA_ARGS__` as a `##` argument is now correctly not further expanded, e.g.:

    cdecl> #define XPASTE(...)  x ## __VA_ARGS__
    cdecl> expand XPASTE(__LINE__)
    ...
    XPASTE(__LINE__) => x__LINE__

** `__VA_OPT__` expanding to nothing
When `__VA_OPT__` expands to nothing, it needs to expand into a placemarker.

** `__VA_OPT__` whitespace
Leading & trailing whitespace in `__VA_OPT__()` tokens is now trimmed, e.g.:

    cdecl> #define CALL_QUOTE(x) QUOTE(x)
    cdecl> #define QUOTE(X) #X
    cdecl> #define TILDAS(...) ~__VA_OPT__( ~ )~
    cdecl> expand CALL_QUOTE(TILDAS(x))
    ...
    CALL_QUOTE(~~~) => "~~~"


* Changes in Cdecl 18.2

** More permissive types
Unknown names are now always permitted as types in pseudo-English.  Hence, the
`--permissive-types` option now only additionally allows keywords in language
versions other than the current language as types.


* Changes in Cdecl 18.1

** `alignas` scoped names
Alignments can now have names to denote the number of bytes, e.g.:

    c++decl> explain alignas(N) char c
    declare c as character aligned as N bytes

where `N` is presumed to be an integer constant.
