@@ -2692,7 +2692,7 @@ cdecl> show FILE
 typedef struct _iobuf FILE;
 cdecl> 
 cdecl> show __FILE__
-#define __FILE__ "example.c"
+#define __FILE__ "testing.c"
 cdecl> show __LINE__
 #define __LINE__ 42
 cdecl> show __STDC__
@@ -2710,7 +2710,7 @@ cdecl> show user macros
 #define NAME2_HELPER(A, B) A ## B
 cdecl> show predefined macros
 #define __DATE__ "Sep 09 1941"
-#define __FILE__ "example.c"
+#define __FILE__ "testing.c"
 #define __LINE__ 42
 #define __STDC_VERSION__ 202311L
 #define __STDC__ 1
@@ -5324,7 +5324,7 @@ using wctype_t = unsigned long;
 using wint_t = int;
 c++decl> show predefined macros
 #define __DATE__ "Sep 09 1941"
-#define __FILE__ "example.cpp"
+#define __FILE__ "testing.cpp"
 #define __LINE__ 42
 #define __TIME__ "12:34:56"
 #define __cplusplus 202302L
